--- a/movie/movieRent/templates/base_generic.html
+++ b/movie/movieRent/templates/base_generic.html
@@ -1,35 +1,30 @@
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
    
-  <meta charset="utf-8">
-  <title>{% block title %}{% endblock %}</title>
-  <<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 
-  <!-- Add additional CSS in static file -->
-  
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+ <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
   
 </head>
 <body>
   <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-2">
-          {% block sidebar %}
-          <ul class="sidebar-nav">
-            <li><a href= "{% url 'index' %}">Home</a></li>
-            <li>Movie</li>
-          </ul>
-          {% endblock %}
-        </div>
-        <div class="col-sm-10 ">
-  {% block content %}{% endblock %}
-        </div>
-      </div>
-  </div>
+    <div class="page-header">
+        <a href="/"><h1>LaGuDan Movie Rent Store</h1></a>
+    </div><!-- End of Page Header -->
+    
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item active"><a class="nav-link" href= "{% url "movieRent:index" %}">Home</a></li>
+        <li class="nav-item "><a class="nav-link" href="#">Movie</a></li>
+      </ul>
+    </div><!-- End of panel-default -->
+    
+      {% block content %}{% endblock %}
+  </div><!--End of container -->  
 </body>
 </html>
