--- a/movie/movieRent/templates/base_generic.html
+++ b/movie/movieRent/templates/base_generic.html
@@ -17,14 +17,32 @@
         <a href="/"><h1>LaGuDan Movie Rent Store</h1></a>
     </div><!-- End of Page Header -->
     
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        {# call __len__ #}
+        {% with total_items=cart|length %}
+          {% if cart|length > 0 %}
+            Your cart :
+            <a href="{% url "cart:cart_detail" %}">
+              {# If total_items is 1 , the output will be 1 item. #}
+              {# If total_items is 2 , the output will be 2 items. #}
+              {{ total_items }} item{{ total_items|pluralize }},
+              ${{ cart.get_total_price }}
+            </a>
+          {% else %}
+            Your shopping cart is empty.
+          {% endif %}
+        {% endwith %}
+      </div><!-- End of panel-heading -->
+    </div><!-- End of panel-defult -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item active"><a class="nav-link" href= "{% url "movieRent:index" %}">Home</a></li>
         <li class="nav-item "><a class="nav-link" href="#">Movie</a></li>
       </ul>
-    </div><!-- End of panel-default -->
-    
-      {% block content %}{% endblock %}
+    </div><!-- End of collapse -->
+    {% block content %}
+    {% endblock %}
   </div><!--End of container -->  
 </body>
 </html>
