--- a/movie/movieRent/templates/movie/detail.html
+++ b/movie/movieRent/templates/movie/detail.html
@@ -28,7 +28,16 @@
                         </div>
                         <p>{{ movie.movie_describe }}</p>
                         <h2><a href="{{ movie.category.get_absolute_url }}">{{ movie.category }}</a></h2>
-                       
+                        <form action="{% url "cart:cart_add" movie.id %}" method="post">
+                            {% csrf_token %}
+                            {% bootstrap_form cart_movie_form %}
+                            {% buttons %}
+                                <button type="submit" class="btn btn-success btn-movie">
+                                    <span class="glyphicon glyphicon-shopping-cart"></span> Add to cart
+                                </button>
+                            {% endbuttons %}
+                        </form>
+                        <p></p>
                     </div>
                 </div>
             </div>
